--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,12 +1,60 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@300;400;600;800&display=swap');
 
-body, html {
+body,
+html {
     margin: 0;
     padding: 0;
     height: 100%;
     font-family: 'Exo 2', sans-serif;
     color: white;
     overflow: hidden;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    height: 64px;
+    padding: 0 1rem;
+    background: rgba(30, 30, 30, 0.71);
+    position: fixed;
+    top: 0;
+    width: 60%;
+    margin: 0 auto;
+    border-radius: 0px 0px 15px 15px;
+    backdrop-filter: blur(5px);
+    left: 0;
+    right: 0;
+    margin: auto;
+    padding: 10px;
+}
+
+.navlink {
+    display: flex;
+    align-items: center;
+    padding: 0 20px;
+    height: 100%;
+    margin-right: 10px;
+    border: 2.5px solid rgba(255, 255, 255, 0.50);
+    border-radius: 15px;
+    text-decoration: none;
+    color: white;
+    background-color: rgb(28, 28, 28);
+}
+
+a:hover {
+    background-color: #000000;
+    box-shadow: 0px 0px 5px 1px rgba(255, 255, 255, 0.84);
+  }
+
+.navlink img {
+    float:left;
+    margin-right: 8px;
+    /* spacing between icon & text */
+    border-radius: 16px;
+    border: 1px rgba(255, 255, 255, 0.29) solid;
+    height: 32px;
+    width: 32px;
 }
 
 .wrapper {
@@ -16,7 +64,7 @@ body, html {
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    background-color: rgba(59, 59, 59, 0.625);
+    background-color: rgba(28, 28, 28, 0.625);
     width: 50%;
     margin: 100px auto auto auto;
     border-radius: 15px;
