--- a/web/css/style.css
+++ b/web/css/style.css
@@ -5,9 +5,12 @@ html {
     margin: 0;
     padding: 0;
     height: 100%;
-    font-family: 'Exo 2', sans-serif;
+    font-family: "Exo 2", sans-serif;
     color: white;
-    overflow: hidden;
+    background-image: url("../img/back.jpg");
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 nav {
@@ -16,17 +19,21 @@ nav {
     justify-content: flex-start;
     height: 64px;
     padding: 0 1rem;
-    background: rgba(30, 30, 30, 0.71);
     position: fixed;
     top: 0;
-    width: 60%;
+    width: 80%;
     margin: 0 auto;
-    border-radius: 0px 0px 15px 15px;
-    backdrop-filter: blur(5px);
+    border-radius: 0px 0px 8px 8px;
+    backdrop-filter: blur(20px);
+    background-color: rgba(31, 31, 31, 0.5);
+    box-shadow: 0 1px 12px rgba(0, 0, 0, 0.25);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-top: 0px;
     left: 0;
     right: 0;
     margin: auto;
     padding: 10px;
+    z-index: 1;
 }
 
 .navlink {
@@ -35,22 +42,34 @@ nav {
     padding: 0 20px;
     height: 100%;
     margin-right: 10px;
-    border: 2.5px solid rgba(255, 255, 255, 0.50);
-    border-radius: 15px;
+    backdrop-filter: blur(20px);
+    background-color: rgba(31, 31, 31, 0.7);
+    box-shadow: 0 1px 12px rgba(0, 0, 0, 0.25);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 8px;
     text-decoration: none;
     color: white;
-    background-color: rgb(28, 28, 28);
 }
 
-a:hover {
-    background-color: #000000;
-    box-shadow: 0px 0px 5px 1px rgba(255, 255, 255, 0.84);
-  }
+#home {
+    margin-left: auto;
+    stroke: white;
+    transition: stroke 0.3s ease;
+}
+
+#home-icon:hover {
+    stroke: rgb(26, 50, 151);
+    filter: drop-shadow(0px 0px 5px rgba(200, 200, 200, 0.7));
+}
+
+.navlink:hover {
+    background-color: rgb(26, 50, 151);
+    box-shadow: 0px 0px 5px rgba(200, 200, 200, 0.7);
+}
 
 .navlink img {
-    float:left;
+    float: left;
     margin-right: 8px;
-    /* spacing between icon & text */
     border-radius: 16px;
     border: 1px rgba(255, 255, 255, 0.29) solid;
     height: 32px;
@@ -64,25 +83,27 @@ a:hover {
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    background-color: rgba(28, 28, 28, 0.625);
-    width: 50%;
-    margin: 100px auto auto auto;
-    border-radius: 15px;
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(20px);
+    background-color: rgba(31, 31, 31, 0.5);
+    box-shadow: 0 1px 12px rgba(0, 0, 0, 0.25);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 8px;
+    width: 70%;
+    margin: 100px auto 24px auto;
 }
 
 #fireworksCanvas {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -1;
-    background-color: black;
+    /*z-index: 1;*/
 }
 
 .content {
     position: relative;
+    flex: 1 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -106,4 +127,23 @@ a:hover {
 .content img {
     height: 128px;
     width: 128px;
+}
+
+#main {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+footer {
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    margin-top: auto;
+    min-height: 5vh;
+    padding: 1rem;
+    z-index: 1;
+    box-shadow: 0px 0px 20px 20px rgba(0,0,0,1);
 }
